only issue remaining seems to be screenshots